<resources>
    <string name="app_name">APP Lanchas</string>
    <string name="Bem_Vindo">Bem Vindo!</string>
    <string name="ENTRAR">ENTRAR</string>
    <string name="title_activity_painel_usuario">PainelUsuario</string>
    <string name="Adicionar">Adicionar</string>
    <string name="Adicionar_Lancha">Adicionar Lancha</string>
    <string name="Nome_Lancha">Nome Lancha</string>
    <string name="Lanchas">Lanchas</string>
    <string name="Cancelar">Cancelar</string>
    <string name="tamanho_em_p_s">Tamanho: (Em pés)</string>
    <string name="modelo">Modelo:</string>
    <string name="nome_do_dono">Nome do Dono:</string>
    <string name="nome_da_lancha">Nome da Lancha:</string>
    <string name="cadastro_de_lancha">Cadastro de Lancha</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="painel_de_usu_rio">Painel de Usuário</string>
    <string name="SAIR">SAIR</string>
    <string name="Saidas">Saidas</string>
    <string name="adicionar_imagem">Adicionar Imagem</string>
    <string name="Adicionar_Sa_da">Adicionar Saída</string>
    <string name="inserir_imagem_lancha">Inserir Imagem Lancha</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="Editar_Lancha">Editar Lancha</string>
    <string name="cadastro_de_saida">Cadastro de Saida</string>
    <string name="Escolha_Uma_Lancha">Escolha Uma Lancha:</string>
    <string name="nome_lancha_00_00_00_00_00">Nome Lancha 00:00 - 00/00/00</string>
    <string name="nome_lancha____00_00">Nome Lancha 00:00</string>
    <string name="_00_00">00:00</string>
    <string name="hora">Hora:</string>
    <string name="data">Data:</string>
    <string name="escolher_data">Escolher Data</string>
    <string name="escolher_hora">Escolher Hora</string>
    <string name="foto">Foto:</string>
    <string name="todo">TODO</string>
    <string name="excluir_lancha">Excluir Lancha</string>
    <string name="Editar_Saida">Editar Saida</string>
    <string name="excluir_saida">Excluir Saida</string>
</resources>
