<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0728A0"
    tools:context=".EditarSaida">

    <Button
        android:id="@+id/btnLanchaSaidaEdited"
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="59dp"
        android:backgroundTint="#1352B3"
        android:text="@string/Lanchas"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEscolhaUmaLanchaEdited" />

    <TextView
        android:id="@+id/tvCadastroDeSaidaEdited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="176dp"
        android:text="@string/cadastro_de_saida"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCadastrarSaidaEdited"
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="59dp"
        android:backgroundTint="#1352B3"
        android:text="@string/cadastrar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEscolherHoraEdited" />

    <TextView
        android:id="@+id/tvEscolhaUmaLanchaEdited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="130dp"
        android:text="@string/Escolha_Uma_Lancha"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCadastroDeSaidaEdited" />

    <TextView
        android:id="@+id/tvDataSaidaEdited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="185dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="185dp"
        android:text="@string/data"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLanchaSaidaEdited" />

    <TextView
        android:id="@+id/tvHoraEdited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="184dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="185dp"
        android:text="@string/hora"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEscolherDataEdited" />

    <Button
        android:id="@+id/btnEscolherDataEdited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="139dp"
        android:backgroundTint="#1352B3"
        android:text="@string/escolher_data"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDataSaidaEdited" />

    <Button
        android:id="@+id/btnEscolherHoraEdited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="162dp"
        android:backgroundTint="#1352B3"
        android:text="@string/escolher_hora"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHoraEdited" />

</androidx.constraintlayout.widget.ConstraintLayout>