<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0728A0"
    tools:context=".AddLancha">

    <EditText
        android:id="@+id/etNomeLancha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/nome_da_lancha"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCadastroDeLancha" />

    <EditText
        android:id="@+id/etNomeDono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nome_do_dono"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/etNomeLancha"
        tools:layout_editor_absoluteX="99dp"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/etModelo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/modelo"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/etNomeDono"
        tools:layout_editor_absoluteX="99dp"
        android:importantForAutofill="no"
        />

    <EditText
        android:id="@+id/etTamanho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/tamanho_em_p_s"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/etModelo"
        tools:layout_editor_absoluteX="99dp"
        android:importantForAutofill="no"
        />

    <TextView
        android:id="@+id/tvCadastroDeLancha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="176dp"
        android:text="@string/cadastro_de_lancha"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCadastrarLancha"
        android:layout_width="321dp"
        android:layout_height="50dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="59dp"
        android:backgroundTint="#1352B3"
        android:text="@string/cadastrar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTamanho" />

</androidx.constraintlayout.widget.ConstraintLayout>