<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0728A0"
    tools:context=".FotoLancha">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="53dp"
        android:text="@string/inserir_imagem_lancha"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="158dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="126dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_camera_alt_black_24dp"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btnTirarFoto"
        android:layout_width="291dp"
        android:layout_height="56dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#1352B3"
        android:text="@string/tirar_foto"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>